<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner_weekNumber"
        android:entries="@array/week"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/ll_sc_container"
        android:weightSum="1"
        android:layout_marginTop="@dimen/inter_element_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_system_count"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:text="@string/tv_system_count_of_week"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_system_count"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:hint="@string/et_system_count_of_week"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_expected_closing"
        android:weightSum="1"
        android:layout_marginTop="@dimen/inter_element_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_expected_closing"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:text="@string/tv_expected_closing"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_expected_closing"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:hint="@string/et_expected_closing"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_actual_closing"
        android:weightSum="1"
        android:layout_marginTop="@dimen/inter_element_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_actual_closing"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:text="@string/tv_actual_closing"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_actual_closing"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:hint="@string/et_actual_closing"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_uv_container"
        android:weightSum="1"
        android:layout_marginTop="@dimen/inter_element_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_uv_uploaded"
            android:layout_width="0dp"
            android:layout_weight="0.6"
            android:text="@string/tv_uv_uploaded"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/et_uv_uploaded"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:hint="@string/et_uv_uploaded"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/bt_save_log"
        android:text="@string/bt_save_log"
        android:layout_marginTop="@dimen/inter_element_margin"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>