<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/activity_margin"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_name"
        android:layout_marginTop="@dimen/inter_element_margin"
        android:hint="@string/et_name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/et_number"
        android:layout_marginTop="@dimen/inter_element_margin"
        android:hint="@string/et_number_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="@dimen/inter_element_margin"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinner_cities"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:entries="@array/cities"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinner_zone"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:entries="@array/zone"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/inter_element_margin"
        android:weightSum="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:id="@+id/spinner_callType"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_weight="0.7"
            android:entries="@array/callType"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/spinner_weekNumber"
            android:textAlignment="center"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:entries="@array/week"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <EditText
        android:id="@+id/et_remarks"
        android:maxLines="5"
        android:layout_marginTop="@dimen/inter_element_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/bt_save_log"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/inter_element_margin"
        android:text="@string/bt_save_log"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>

</LinearLayout>